# test-wrap02

./: .copier-answers.yml  .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .sourcery.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  poetry.toml  pyproject.toml  setup.bash  workers.sh
.github/workflows/: ci.yaml
src/capgemini/: __init__.py  horizon_data_retrieve_pipeline_test.py  multi_data_retrieve_pipeline_test.py  my_module.py  plannet_data_retrieve_pipeline_test.py  sauron_data_retrieve_pipeline_test.py
src/capgemini/config/: horizon_wrapper_config_test.yaml  multi_wrapper_config.yaml  plannet_wrapper_config_test.yaml  sauron_wrapper_config_test.yaml
src/capgemini/config/default_settings/: default_client.yaml  default_prom.yaml  default_redis.yaml
src/capgemini/config/horizon_client_settings/: dev_client.yaml  prod_client.yaml  stage_client.yaml
src/capgemini/config/plannet_client_settings/: dev_client.yaml  prod_client.yaml  stage_client.yaml
src/capgemini/config/prometheus_settings/: prom_client.yaml
src/capgemini/config/redis_settings/: custom_client.yaml
src/capgemini/config/sauron_client_settings/: dev_client.yaml  prod_client.yaml  stage_client.yaml
src/capgemini/use_cases/: horizon_data_retrieve_handler.py  multi_wrapper_retrieve_handler.py  plannet_data_retrieve_handler.py  sauron_data_retrieve_handler.py
tests/: test_my_module.py
