# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[project]
authors = [
    { name = "Amir Boroufar", email = "amir@sky.com" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []
description = ""

license = {file = "LICENSE"}
name = "capgemini"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

#[project.urls]
#Repository = ""
#Issues = "/issues"


[tool.pytest.ini_options]
testpaths = ["tests"]



#[tool.coverage.run]
#branch = true
#source = ["src/capgemini"]
#command_line = "-m pytest"


[tool.poetry]
readme = "README.md"
package-mode = true

# Project Public & Private Dependencies
[tool.poetry.dependencies]
python = ">=3.10,<3.15"
poetry-core = "^2.1.3"
python-dotenv = "^1.1.1"

# Project Testing Dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^7.0.0"
ruff = "^0.7.2"
pre-commit = "^4.0.1"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.group.wrappers.dependencies]
chandra = {git = "gitlab@git.bskyb.com:plannet-users-team/chandra.git", branch = "main"}
plannet-client = {git = "gitlab@git.bskyb.com:plannet-users-team/plannet-client.git", branch = "main"}
sauron-client = {git = "gitlab@git.bskyb.com:plannet-users-team/sauron-client.git", branch="main"}
horizon-client = {git = "gitlab@git.bskyb.com:plannet-users-team/horizon-client.git",  branch="main"}
